// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<withPropsOnChange(HorizontalGutter)
  className="Stream-root"
  size="double"
>
  <withPropsOnChange(HorizontalGutter)
    size="half"
  >
    <withContext(createMutationContainer(withContext(createMutationContainer(withContext(createMutationContainer(withContext(withLocalStateContainer(Relay(UserBoxContainer)))))))))
      user={null}
    />
    <PostCommentFormFake />
  </withPropsOnChange(HorizontalGutter)>
  <withPropsOnChange(HorizontalGutter)
    aria-live="polite"
    id="talk-comments-stream-log"
    role="log"
  >
    <withPropsOnChange(HorizontalGutter)
      key="comment-1"
    >
      <Relay(CommentContainer)
        data={
          Object {
            "id": "comment-1",
          }
        }
      />
      <Relay(ReplyListContainer)
        comment={
          Object {
            "id": "comment-1",
          }
        }
      />
    </withPropsOnChange(HorizontalGutter)>
    <withPropsOnChange(HorizontalGutter)
      key="comment-2"
    >
      <Relay(CommentContainer)
        data={
          Object {
            "id": "comment-2",
          }
        }
      />
      <Relay(ReplyListContainer)
        comment={
          Object {
            "id": "comment-2",
          }
        }
      />
    </withPropsOnChange(HorizontalGutter)>
  </withPropsOnChange(HorizontalGutter)>
</withPropsOnChange(HorizontalGutter)>
`;

exports[`when there is more disables load more button 1`] = `
<withPropsOnChange(HorizontalGutter)
  className="Stream-root"
  size="double"
>
  <withPropsOnChange(HorizontalGutter)
    size="half"
  >
    <withContext(createMutationContainer(withContext(createMutationContainer(withContext(createMutationContainer(withContext(withLocalStateContainer(Relay(UserBoxContainer)))))))))
      user={null}
    />
    <PostCommentFormFake />
  </withPropsOnChange(HorizontalGutter)>
  <withPropsOnChange(HorizontalGutter)
    aria-live="polite"
    id="talk-comments-stream-log"
    role="log"
  >
    <withPropsOnChange(HorizontalGutter)
      key="comment-1"
    >
      <Relay(CommentContainer)
        data={
          Object {
            "id": "comment-1",
          }
        }
      />
      <Relay(ReplyListContainer)
        comment={
          Object {
            "id": "comment-1",
          }
        }
      />
    </withPropsOnChange(HorizontalGutter)>
    <withPropsOnChange(HorizontalGutter)
      key="comment-2"
    >
      <Relay(CommentContainer)
        data={
          Object {
            "id": "comment-2",
          }
        }
      />
      <Relay(ReplyListContainer)
        comment={
          Object {
            "id": "comment-2",
          }
        }
      />
    </withPropsOnChange(HorizontalGutter)>
    <Localized
      id="comments-stream-loadMore"
    >
      <withPropsOnChange(Button)
        aria-controls="talk-comments-stream-log"
        disabled={true}
        fullWidth={true}
        id="talk-comments-stream-loadMore"
        onClick={[Function]}
        variant="outlined"
      >
        Load More
      </withPropsOnChange(Button)>
    </Localized>
  </withPropsOnChange(HorizontalGutter)>
</withPropsOnChange(HorizontalGutter)>
`;

exports[`when there is more renders a load more button 1`] = `
<withPropsOnChange(HorizontalGutter)
  className="Stream-root"
  size="double"
>
  <withPropsOnChange(HorizontalGutter)
    size="half"
  >
    <withContext(createMutationContainer(withContext(createMutationContainer(withContext(createMutationContainer(withContext(withLocalStateContainer(Relay(UserBoxContainer)))))))))
      user={null}
    />
    <PostCommentFormFake />
  </withPropsOnChange(HorizontalGutter)>
  <withPropsOnChange(HorizontalGutter)
    aria-live="polite"
    id="talk-comments-stream-log"
    role="log"
  >
    <withPropsOnChange(HorizontalGutter)
      key="comment-1"
    >
      <Relay(CommentContainer)
        data={
          Object {
            "id": "comment-1",
          }
        }
      />
      <Relay(ReplyListContainer)
        comment={
          Object {
            "id": "comment-1",
          }
        }
      />
    </withPropsOnChange(HorizontalGutter)>
    <withPropsOnChange(HorizontalGutter)
      key="comment-2"
    >
      <Relay(CommentContainer)
        data={
          Object {
            "id": "comment-2",
          }
        }
      />
      <Relay(ReplyListContainer)
        comment={
          Object {
            "id": "comment-2",
          }
        }
      />
    </withPropsOnChange(HorizontalGutter)>
    <Localized
      id="comments-stream-loadMore"
    >
      <withPropsOnChange(Button)
        aria-controls="talk-comments-stream-log"
        disabled={false}
        fullWidth={true}
        id="talk-comments-stream-loadMore"
        onClick={[Function]}
        variant="outlined"
      >
        Load More
      </withPropsOnChange(Button)>
    </Localized>
  </withPropsOnChange(HorizontalGutter)>
</withPropsOnChange(HorizontalGutter)>
`;

exports[`when use is logged in renders correctly 1`] = `
<withPropsOnChange(HorizontalGutter)
  className="Stream-root"
  size="double"
>
  <withPropsOnChange(HorizontalGutter)
    size="half"
  >
    <withContext(createMutationContainer(withContext(createMutationContainer(withContext(createMutationContainer(withContext(withLocalStateContainer(Relay(UserBoxContainer)))))))))
      user={Object {}}
    />
    <withContext(createMutationContainer(PostCommentFormContainer))
      assetID="asset-id"
    />
  </withPropsOnChange(HorizontalGutter)>
  <withPropsOnChange(HorizontalGutter)
    aria-live="polite"
    id="talk-comments-stream-log"
    role="log"
  >
    <withPropsOnChange(HorizontalGutter)
      key="comment-1"
    >
      <Relay(CommentContainer)
        data={
          Object {
            "id": "comment-1",
          }
        }
      />
      <Relay(ReplyListContainer)
        comment={
          Object {
            "id": "comment-1",
          }
        }
      />
    </withPropsOnChange(HorizontalGutter)>
    <withPropsOnChange(HorizontalGutter)
      key="comment-2"
    >
      <Relay(CommentContainer)
        data={
          Object {
            "id": "comment-2",
          }
        }
      />
      <Relay(ReplyListContainer)
        comment={
          Object {
            "id": "comment-2",
          }
        }
      />
    </withPropsOnChange(HorizontalGutter)>
  </withPropsOnChange(HorizontalGutter)>
</withPropsOnChange(HorizontalGutter)>
`;
